# FileGate

./: .gitignore  README.md  pyproject.toml
.clinerules/: 00-git-kanban.md  README.md
.clinerules/workflows/: finish-kanban-pr.md  start-kanban-task.md  sync-base-before-integrate.md
docs/: compatibility-matrix.md  edge-cases.md  file-access-behavior-spec-0.1.md  glossary.md  problem-statement.md  related-projects.md  result-schema.md  roadmap.md  test-cases.md
filegate/: __init__.py  artifact_validation.py  bootstrap.py  cases.py  cli.py  environment.py  linux_portal.py  runner.py
filegate/reporting/: __init__.py  comparison.py  html.py  json.py  markdown.py  matrix.py
filegate/targets/: __init__.py  electron.py  presets.py  python_gtk.py
runs-validation/: comparison.json  electron-report.md  python-tkinter-report.json
runs-validation/2026-05-10T21-38-22Z-electron/: run-summary.json
runs-validation/2026-05-10T21-38-22Z-python-tkinter/: run-summary.json
samples/electron/: README.md  main.js  package-lock.json  package.json  preload.js  renderer.js
samples/linux-portal/: README.md  app.py
samples/python-gtk/: README.md  app.py
samples/python-tkinter/: README.md  app.py
tasks/: README.md
tasks/mvp-agents/: MVP-01-runner-core-and-case-registry.md  MVP-02-reporting-json-markdown-html.md  (+1 more)
tasks/poc/: POC-01-repo-scaffold-and-cli.md  (+2 more)
tests/: test_artifact_validation.py  test_cases_and_runner.py  test_linux_portal.py  test_path_naming_cases.py  test_permissions_cases.py  test_reporting_comparison.py  test_runner_cases.py  test_targets_and_bootstrap.py
(+21 files in other folders)
